# det_bfs_exp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  experiment.py
.devcontainer/: Dockerfile  devcontainer.json
cli/: CMakeLists.txt  bfs.cpp  convert_to_edgelist.cpp  degree.cpp  expan.cpp  graph_generator.cpp  run.cpp  stats.cpp
code/: .gitignore  CMakeLists.txt  README.md
code/cli/: convert_to_edgelist.cpp
code/include/framework/: graph_parser.hpp
code/src/framework/: component_structure.cpp  graph_parser.cpp
code/test/: graph_tests.cpp  timer_tests.cpp
code/test/input/: butterfly_graph_edge_list_multi  butterfly_graph_konect  butterfly_k3_loop
evaluation/: .gitignore  README.md  example.R  helper.R  plot_bfs.R  plot_degrees.R  plot_expansion.R  plot_for_paper.R  plot_stats.R  plotting.R
ext_libs/: CMakeLists.txt
framework/: CMakeLists.txt
framework/include/framework/: bibfs.hpp  graph.hpp  graph_generator.hpp  graph_writer.hpp  paths.h.in  random.hpp
framework/src/: bibfs.cpp  bibfs.hpp  component_structure.cpp  component_structure.hpp  expansion.cpp  expansion.hpp  graph.cpp  graph.hpp  graph_generator.cpp  graph_generator.hpp  graph_parser.cpp  graph_parser.hpp  graph_writer.cpp  graph_writer.hpp  locality.cpp  locality.hpp  paths.h.in  random.cpp
instances/: README.md
instances/download/: README.md  download-networks.sh
scripts/: copy_plots.sh  download_instances.sh  merge.sh
test/: CMakeLists.txt  expansion_test.cpp  graph_tests.cpp  locality_test.cpp  timer_tests.cpp
test/input/: butterfly_graph_edge_list  butterfly_k3_loop_shuffle
